Adds the eslint and the gh-pages dependecies

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "renan0211.github.io",
+  "homepage": "https://renan0211.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3"
   }
 }
